--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,14 @@ jobs:
         FILE_URL: ${{ secrets.FILE_URL }}
       run: |
         curl -o jevents_live.m3u $FILE_URL
+
     - name: Commit and push changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add jevents_live.m3u        git commit -m "Update jevents_live.m3u file"
+        git add jevents_live.m3u
+        git commit -m "Update jevents_live.m3u file"
         git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
         git push origin HEAD:main
